Index: hello world

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,7 +7,7 @@
         <title>LinkedU</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        hello world
     </h:body>
 </html>
 
