potential fix for login

--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -25,14 +25,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="index.xhtml">
+                    <a class="brand" href="/faces/index.xhtml">
                         <strong>LinkedU</strong>
                     </a>
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right">
-                            <li><a href="index.xhtml">HOME</a></li>
-                            <li><a class="btn-header" href="signup.xhtml">Sign up</a></li>
-                            <li><a class="btn-header active" href="login.xhtml">Sign in</a></li>
+                            <li><a href="/faces/index.xhtml">HOME</a></li>
+                            <li><a class="btn-header" href="/faces/signup.xhtml">Sign up</a></li>
+                            <li><a class="btn-header active" href="/faces/login.xhtml">Sign in</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="span12 dosnt">
                         <span>Don’t have an account?</span>
-			<a href="signup.xhtml">Sign up</a>
+			<a href="/faces/signup.xhtml">Sign up</a>
                     </div>
                 </div>
             </div>
