--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,16 +6,15 @@
     <h:head>
         <title>LinkedU</title>
     <!-- Styles -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-        <link href="css/bootstrap-overrides.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/theme.css">
+        <link href="css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="css/bootstrap-responsive.min.css" rel="stylesheet"/>
+        <link href="css/bootstrap-overrides.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="css/theme.css"/>
         <link rel="stylesheet" href="css/index.css" type="text/css" media="screen" />
         
-        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection">
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'/>
+        <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection"/>
     </h:head>
-<<<<<<< HEAD
     <h:body class="pull_top">
       <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
@@ -74,20 +73,10 @@
             <img class="asset left-365 sp600 t270 z4" src="img/slides/scene3/iphone.png" />
             <img class="asset left-350 sp450 t135 z2" src="img/slides/scene3/desktop.png" />
             <img class="asset left-185 sp550 t220 z1" src="img/slides/scene3/macbook.png" />
-            <div class="info">
-                <h2>Fully Responsive theme</h2>
-                <a href="features.html">TOUR THE PRODUCT</a>
-            </div>
         </article>
         <article class="slide" id="responsive" style="background: url('img/backgrounds/indigo.jpg') repeat-x top center;">
             <img class="asset left-472 sp600 t120 z3" src="img/slides/scene4/html5.png" />
             <img class="asset left-190 sp500 t120 z2" src="img/slides/scene4/css3.png" />
-            <div class="info">
-                <h2>
-                    Responsive <strong>HTML5 & CSS3</strong>
-                    Theme
-                </h2>                
-            </div>
         </article>        
     </section>
 
@@ -120,7 +109,7 @@
                     <div class="span4 feature">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="img/service2.png">
+                                <img src="img/service2.png"/>
                                 <span class="circle"> 
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -137,7 +126,7 @@
                     <div class="span4 feature last">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="img/service3.png">
+                                <img src="img/service3.png"/>
                                 <span class="circle"> 
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -210,11 +199,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
 
-    <script type="text/javascript" src="js/index-slider.js"></script>	
-=======
-    <h:body>
-        hello world
->>>>>>> origin/master
-    </h:body>
+    <script type="text/javascript" src="js/index-slider.js"></script>
 </html>
 
