--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -92,7 +92,7 @@
                     <div class="span4 feature first">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="img/service1.png">
+                                <img src="img/service1.png"/>
                                 <span class="circle"> 
                                     <span class="plus">&#43;</span>
                                 </span>
