Modified Text Message

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -24,14 +24,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="index.html">
+            <a class="brand" href="index.xhtml">
                 <strong>LinkedU</strong>
             </a>
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a class="btn-header" href="sign-up.html">Sign up</a></li>
-                    <li><a class="btn-header active" href="sign-in.html">Sign in</a></li>
+                    <li><a href="index.xhtml">HOME</a></li>
+                    <li><a class="btn-header" href="signup.xhtml">Sign up</a></li>
+                    <li><a class="btn-header active" href="login.xhtml">Sign in</a></li>
                 </ul>
             </div>
         </div>
