--- a/web/signup.xhtml
+++ b/web/signup.xhtml
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="faces/index.xhtml">
+                    <a class="brand" href="index.xhtml">
                         <strong>LinkedU</strong>
                     </a>
                     <div class="nav-collapse collapse">
