--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="faces/index.xhtml">
+                    <a class="brand" href="index.xhtml">
                         <strong>LinkedU</strong>
                     </a>
                     <div class="nav-collapse collapse">
