--- a/web/scheduleAppt.xhtml
+++ b/web/scheduleAppt.xhtml
@@ -1,52 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://java.sun.com/jsf/core">
-      <!--xmlns:p="http://primefaces.org/ui"-->
-    <h:head>
-        <title>Schedule Appointment</title>
-    </h:head>
+    <head>
+        <title>LinkedU</title>
+
+        <!-- Styles -->
+        <link href="css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="css/bootstrap-responsive.min.css" rel="stylesheet"/>
+        <link href="css/bootstrap-overrides.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="css/theme.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'/>
+
+        <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection"/>
+        <link rel="stylesheet" href="css/sign-in.css" type="text/css" media="screen" />
+    </head>
+    <f:event listener="#{homeController.isLogged}" type="preRenderView" />
     <h:body>
+        <div class="navbar navbar-inverse navbar-static-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="index.xhtml">
+                        <strong>LinkedU</strong>
+                    </a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav pull-right">
+                            <li><a href="index.xhtml">HOME</a></li>
+                            <h:panelGroup rendered="#{homeController.studentLoggedIn()}">
+                                <li><a class="btn-header" href="scheduleAppt.xhtml">Schedule Appointment</a></li>
+                            </h:panelGroup>
+                            <h:panelGroup rendered="#{!homeController.loggedIn}">
+                                <li><a class="btn-header" href="signup.xhtml">Sign up</a></li>
+                                <li><a class="btn-header active" href="login.xhtml">Log in</a></li>
+                            </h:panelGroup>
+                            <h:panelGroup rendered="#{homeController.loggedIn}">
+                                <h:form>
+                                    <li><a class="btn-header"><h:commandLink action="#{homeController.logout()}">Log out</h:commandLink></a></li>
+                                </h:form>
+                                <!--<li><a class="btn-header" href="login.xhtml">Log out</a></li>-->
+                            </h:panelGroup>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <h2>Schedule an Appointment with a University</h2><br/>
         <h:form id="apptForm">
-            First Name: <h:inputText id="firstName" value="#{profileController.user.firstName}" required="true" requiredMessage="Please enter first name" validatorMessage="First name must be between 2 and 25 characters">
-                <f:validateLength minimum="2" maximum="25"/>
-            </h:inputText>
-            <h:message for="firstName" style="color: red;" /><br/><br/>
-            Last Name: <h:inputText id="lastName" value="#{profileController.user.lastName}" required="true" requiredMessage="Please enter last name" validatorMessage="Last name must be between 2 and 25 characters">
-                <f:validateLength minimum="2" maximum="25"/>
-            </h:inputText>
-            <h:message for="lastName" style="color: red;" /><br/><br/>
-            User ID: <h:inputText id="userID" value="#{profileController.user.userID}" required="true" requiredMessage="Please enter user id">
-                <!--<p:ajax  event="blur" listener="#{bean.ajaxEvent}" update="empname"/>-->
-            </h:inputText>
-            <h:message for="userID" style="color: red;" /><br/><br/>
-            Password: <h:inputSecret redisplay="false" id="password" value="#{profileController.login.passwordHash}" required="true" requiredMessage="Please enter password">
-                <f:validator validatorId="passwordValidator" />
-                <f:attribute name="confirmPassword" value="#{confirmPassword}" />
-            </h:inputSecret>
-            <h:message for="password" style="color: red;" /><br/><br/>
-            Confirm Password: <h:inputSecret redisplay="false" id="confirmPassword" binding="#{confirmPassword}" required="true" requiredMessage="Please enter confirm password">
-            </h:inputSecret>
-            <h:message for="confirmPassword" style="color: red;" /><br/><br/>
-            Email: <h:inputText id="email" value="#{profileController.user.email}" required="true" requiredMessage="Please enter email" validatorMessage="Invalid email format">
-                <f:validateRegex
-		pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
-            </h:inputText>
-            <h:message for="email" style="color: red;" /><br/><br/>
-            Security Question: <h:inputText id="securityQuestion" value="#{profileController.user.securityQuestion}" required="true" requiredMessage="Please enter security question">
-            </h:inputText>
-            <h:message for="securityQuestion" style="color: red;" /><br/><br/>
-            Security Answer: <h:inputText id="securityAnswer" value="#{profileController.user.securityAnswer}" required="true" requiredMessage="Please enter security answer">
-            </h:inputText>
-            <h:message for="securityAnswer" style="color: red;" /><br/><br/>
-            <h:commandButton id="submitID" value="Submit" action="#{profileController.createUser()}"/>
+            
         </h:form>
 
     </h:body>
