--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,6 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>LinkedU</title>
+        
         <!-- Styles -->
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/bootstrap-responsive.min.css" rel="stylesheet"/>
@@ -28,7 +29,7 @@
                 <strong>LinkedU</strong>
             </a>
             <div class="nav-collapse collapse">
-                <ul class="nav pull-right">S
+                <ul class="nav pull-right">
                     <li><a href="index.xhtml">HOME</a></li>
                     <h:panelGroup rendered="#{homeController.studentLoggedIn()}">
                         <li><a class="btn-header" href="scheduleAppt.xhtml">Schedule Appointment</a></li>
