--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -40,10 +40,10 @@
                                 <li><a class="btn-header active" href="login.xhtml">Log in</a></li>
                             </h:panelGroup>
                             <h:panelGroup rendered="#{homeController.loggedIn}">
-                                <h:form>
-                                    <li><a class="btn-header"><h:commandLink action="#{homeController.logout()}">Log out</h:commandLink></a></li>
-                                </h:form>
-                                <!--<li><a class="btn-header" href="login.xhtml">Log out</a></li>-->
+                                <li><h:form>
+                                    <h:commandLink class="btn-header" action="#{homeController.logout()}">Log out</h:commandLink>
+                                </h:form></li>
+                            <!--<li><a class="btn-header" href="login.xhtml">Log out</a></li>-->
                             </h:panelGroup>
                         </ul>
                     </div>
