commit b4 pull - mitch

--- a/web/university.xhtml
+++ b/web/university.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     
     <h:head>
-        <title>LinkedU </title>
+        <title>LinkedU University</title>
 <!--<title value ="#{universityController.university.universityName}"/>-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
