--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,16 +5,17 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>LinkedU</title>
-        
+        <f:metadata>
+            <f:event listener="#{universityController.findHighlighted}" type="preRenderView" />
+        </f:metadata>
         <!-- Styles -->
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="css/bootstrap-responsive.min.css" rel="stylesheet"/>
         <link href="css/bootstrap-overrides.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="css/theme.css"/>
-        <link rel="stylesheet" href="css/index.css" type="text/css" media="screen" />
-        
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'/>
         <link rel="stylesheet" type="text/css" href="css/lib/animate.css" media="screen, projection"/>
+        <link rel="stylesheet" href="css/sign-in.css" type="text/css" media="screen" />
     </h:head>
     <h:body class="pull_top">
            <div class="navbar navbar-inverse navbar-static-top">
@@ -49,9 +50,19 @@
                 </div>
             </div>
         </div>
-
-   
-
+        <div id="sign_in1">
+            <div class="container">
+                <div class="row">  
+                    <center style = "color:white;">
+                        <h1>LinkedU University Highlight</h1>
+                        <h:graphicImage  name="universityImage" url="#{universityController.university.picture}"/><br/>
+                        <h2><h:outputText value = "#{universityController.university.universityName}"/></h2>
+                        <h:button value="Find Out More" outcome="#{universityController.university.navigateToWebsite()}" />
+                        <h:commandButton id="linkUniversityPage" value="Find out More" action="#{universityController.navigateToHighlighted()}"/>
+                    </center>
+                </div>
+            </div>
+        </div>
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
