Updated university.xhtml to display images

--- a/web/university.xhtml
+++ b/web/university.xhtml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -48,7 +47,7 @@
                 <div class="row"> 
                     <center style = "color:white;">
                         <h1><h:outputText value = "#{universityController.university.universityName}"/></h1>
-                        <h:graphicImage  name="universityImage" value="#{universityController.university.picture}"/>
+                        <img src ="#{universityController.university.picture}"/><br/>
                         <br/>
                         <h3>About Us </h3><br/>
                         <h:outputText value="#{universityController.university.bio}"/>
