index Button should work, changes made to getUniversities(),

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -60,7 +60,7 @@
                       <!--  <h:form >
                             <h:button id="linkUniversityPage" value="Find out More" />
                         </h:form>-->
-                        <form action="#{universityController.navigateTo(university.universityName)}">
+                        <form action="#{universityController.navigateTo()}">
                             <input type="submit" value="Find Out More" />
                         </form>
                     </center>
@@ -73,6 +73,7 @@
     <script src="js/theme.js"></script>
 
     <script type="text/javascript" src="js/index-slider.js"></script>
+    
     </h:body>
 </html>
 
